--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -78,4 +78,12 @@ form button {
 
 form button:hover {
     background: #5ebbb7;
+}
+
+#dynamic-content {
+    margin-top: 20px;
+    padding: 20px;
+    background: #f9f9f9;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
