--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*Change the format and syling convention */
 body {
     font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     margin: 0;
